--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-Este programa permite gerenciar compras de forma simples. O usuário pode registrar uma nova compra, onde insere o nome da compra, quantidade de produtos e valores, que são salvos em um arquivo de texto. Também é possível buscar uma compra específica e listar todas as compras salvas. Cada compra é registrada em arquivos individuais com extensão .txt no diretório atual, facilitando o gerenciamento e consulta do histórico de compras.
+This program allows you to manage purchases in a simple way. The user can register a new purchase, where they enter the name of the purchase, quantity of products and values, which are saved in a text file. It is also possible to search for a specific purchase and list all saved purchases. Each purchase is recorded in individual files with a .txt extension in the current directory, making it easier to manage and consult the purchase history.
